The file [[:Image:Luther46c.jpg]] has been replaced by [[:Image:Martin_Luther,_1529.jpg]] by administrator [[:commons:User:Ymblanter]]: ''[[commons:COM:FR|File renamed]]:''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Lutheri_Martin.mw
+++ b/Lutheri_Martin.mw
@@ -1,5 +1,5 @@
 {{Elokäük
-|pilt=Luther46c.jpg
+|pilt=Martin_Luther,_1529.jpg
 |pildiallkiri=Lutheri Martin 1529. a., Cranachi Lucasõ pilt
 |nimi=Lutheri Martin
 |umakeeline_nimi=Martin Luther
