--- a/Boklundi_Johan_Christoffer.mw
+++ b/Boklundi_Johan_Christoffer.mw
@@ -5,7 +5,7 @@
 |umakeeline_nimi= Johan Christoffer Boklund
 |sünnüaig=[[15. hainakuu päiv]] [[1817]]
 |sünnüpaik=[[Stockholm]]
-|kuulmisaig=[ 9. joulukuu päiv]] [[1880]]
+|kuulmisaig=[[ 9. joulukuu päiv]] [[1880]]
 <!--|matmispaik=-->
 |ammõt=kunstnik
 }}
