--- a/Varssavi.mw
+++ b/Varssavi.mw
@@ -15,7 +15,7 @@
 |  kaardi_pilt = [[Pilt:POL Warszawa map.svg|250px|]]
 |  kaardiallkiri = Kon Varssavi Poolan om
 }}
-
+[[File:FB Warszawa panorama.jpg|thumb|left| Varssavi (Warszawa)]]
 '''Varssavi''' om [[Poola]] [[pääliin]] nink kõgõ suurõmb [[liin]].
 
 {{Commons|Warszawa|Varssavi}}
