--- a/Lordi.mw
+++ b/Lordi.mw
@@ -32,6 +32,7 @@ Ansambli paistus silmä tuu poolõst, et püüne pääl kandvaq nääq maskõ ja
 * [[Deadache]] (2008)
 * [[Babez for Breakfast]] (2010)
 * [[To Beast or Not To Beast]] (2013)
+* [[Scare Force One]] (2014)
 
 == Singliq ==
 
