*Empty MediaWiki Message*

--- a/Nauru.mw
+++ b/Nauru.mw
@@ -6,6 +6,8 @@ Vapp=Pilt:|
 Kaart=Pilt:LocationNauru.png|
 Riigikiil=[[inglüse kiil]], [[nauru kiil]]|
 Pääliin=[[Yaren]]|
+Riigitüübi pää=President'|
+Riigipää=[[Dalia Grybauskaitė]]|
 Suurus=21|
 Rahvaarv=10 000 (2009)|
 Internetitunnus=[[.nr]]
