*Empty MediaWiki Message*

--- a/Nauru.mw
+++ b/Nauru.mw
@@ -7,7 +7,7 @@ Kaart=Pilt:LocationNauru.png|
 Riigikiil=[[inglüse kiil]], [[nauru kiil]]|
 Pääliin=[[Yaren]]|
 Riigitüübi pää=President'|
-Riigipää=[[Dalia Grybauskaitė]]|
+Riigipää=[[Baron Waqa]]|
 Suurus=21|
 Rahvaarv=10 000 (2009)|
 Internetitunnus=[[.nr]]
