--- a/Kõrbõ.mw
+++ b/Kõrbõ.mw
@@ -1,3 +1,4 @@
+[[Pilt:ValleLuna-002.jpg|200px|thumb|Atacama kõrbõ]]
 [[Pilt:Desert - Inner Mongolia edit.jpg|200px|thumb|Gobi kõrbõ]]
 
 '''Kõrbõ''' om ala, kon aastagan tulõ sadõmit alla 250 mm.
