--- a/Kallõtõ_järv.mw
+++ b/Kallõtõ_järv.mw
@@ -1,6 +1,6 @@
 {{VõromaaJärv 
 | nimi = Kallõtõ järv
-| pilt =
+| pilt = [[Pilt:KalleteJärv.JPG|frameless]]
 | pildiallkiri = 
 | kihlkund = Karula
 | järve_juuskvaq = 
@@ -24,7 +24,4 @@
 
 ==Viieläjäq ja -kasvoq==
 
-
 [[Katõgooria:Karula kihlkunna järveq]]
-
-[[et:Kallõtõ järv]]
