--- a/Mustjärv_(Savi).mw
+++ b/Mustjärv_(Savi).mw
@@ -1,6 +1,6 @@
 {{VõromaaJärv 
 | nimi = Mustjärv
-| pilt =
+| pilt =[[Pilt:KaadsiMustjärv.JPG|frameless]]
 | pildiallkiri = 
 | kihlkund = Karula
 | järve_juuskvaq = 
@@ -23,6 +23,5 @@
 '''Mustjärv''' om [[järv]] [[Karula kihlkund|Karula kihlkunnan]] [[Karula vald|Karula vallan]]. 
 
 ==Viieläjäq ja -kasvoq==
-
 
 [[Katõgooria:Karula kihlkunna järveq]]
