--- a/Savijärv_(Savi).mw
+++ b/Savijärv_(Savi).mw
@@ -1,6 +1,6 @@
 {{VõromaaJärv 
 | nimi = Savijärv
-| pilt =
+| pilt =[[Pilt:KarulaSavijärv.JPG|frameless]]
 | pildiallkiri = 
 | kihlkund = Karula
 | järve_juuskvaq = 
@@ -24,7 +24,4 @@
 
 ==Viieläjäq ja -kasvoq==
 
-
 [[Katõgooria:Karula kihlkunna järveq]]
-
-[[et:Karula Savijärv]]
