*Empty MediaWiki Message*

--- a/Algarv.mw
+++ b/Algarv.mw
@@ -1,3 +1,5 @@
+[[File:Sieve of Eratosthenes animation.gif|frame|[[Eratosthenes]]i seula.]]
+
 '''Algarv''' om ütest suurõmb [[tüküarv]], miä jagonõs õnnõ 1 ja esiqhindäga. 
 
 Edimädseq algarvoq ommaq 2,3,5,7,11,13,17,19,... . Algarvõ om lõpmalda pall'o.
